hphp/hack/test/typecheck/object_not_subtype_of_class.php.exp
File "object_not_subtype_of_class.php", line 7, characters 10-17:
Invalid return type (Typing[4110])
File "object_not_subtype_of_class.php", line 6, characters 36-36:
Expected C
File "object_not_subtype_of_class.php", line 6, characters 28-28:
But got T
